--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,20 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+.section-content {
+  padding-inline: 10px;
+}
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: "IBM Plex mono";
+  font-size: 18px;
+  font-weight: 400;
+  background-color: var(--bg-color, #000028);
+  color: var(--main-color, #f1b2ce);
+}
+
+.header {
+  background-image: url(../images/cover-image-dark.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-block: 10px;
+  color: var(--accent-color, #ff0070);
 }
