--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,5 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bg-color: #000028;
+  --main-color: #f1b2ce;
+  --accent-color: #ff0070;
+}
