--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,35 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --main-color: #f1b2ce;
+  --heading-color: #db00ff;
+  --accent-color: var(--shadow-color, #ff0070);
+  --bg-image: url(../images/cover-image-dark.png);
+
+  .decorated-zone__item {
+    content: "REC";
+    position: absolute;
+    display: block;
+    color: var(--accent-color);
+    font-size: 18px;
+    line-height: 25px;
+    inset-block-start: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
+    inset-inline-end: clamp(2.375rem, 1.779rem + 2.54vw, 3rem);
+  }
+
+  .decorated-zone__item::after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+    filter: drop-shadow(0px 0px 4px var(--accent-color));
+    block-size: 9px;
+    inline-size: 9px;
+    inset-inline-end: -20px;
+    inset-block-start: 9px;
+  }
+
+  .decorated-zone::before,
+  .decorated-zone::after {
+    color: var(--accent-color);
+  }
 }
