--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,10 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --main-color: #353430;
+  --accent-color: #ff8dcb;
+  --heading-color: #ffc2e6;
+  --shadow-color: #ff0070;
+  --bg-image: url(../images/cover-image-light.png);
 }
