--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,13 @@
 :root {
   --bg-color: #000028;
-  --main-color: #f1b2ce;
-  --accent-color: #ff0070;
+  --main-color: #353430;
+  --accent-color: #ff8dcb;
+  --heading-color: #ffc2e6;
+  --shadow-color: #ff0070;
+  --bg-image: url(../images/cover-image-light.png);
+  --indentation-s: 10px;
+  /* BREAKPOINTS */
+  --breakpoint-s: 375px;
+  --breakpoint-m: 768px;
+  --brealpoint-l: 1024px;
 }
