--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,28 @@
 /* ПЕРЕИСПОЛЬЗУЕМЫЕ БЛОКИ */
 .header__theme-menu-button {
-  background-color: transparent;
   border: none;
+  padding-inline: 13px;
+  background-color: transparent;
   min-block-size: 26px;
-  padding: 0 13px;
 }
 
 .title {
-  color: var(--heading-color, #ffc2e6);
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--heading-color);
   font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
 }
 
 .title-decor {
-  background-color: var(--accent-color);
-  font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
+  background-color: var(--accent-color);
+  color: var(--secondary-color);
+}
+
+.text-shadow {
+  text-shadow: 2px 2px 0px var(--accent-color);
+  text-decoration: none;
 }
 
 .header__theme-menu-button_active {
@@ -26,13 +31,24 @@
 }
 
 .section-heading {
-  font-size: 18px;
-  font-weight: 700;
   margin-block-end: 20px;
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--accent-color);
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .content-item {
-  margin-block-end: 20px;
+  padding-block: 10px;
+}
+
+.content__link {
+  text-decoration: none;
 }
 
 .content-heading {
@@ -40,18 +56,16 @@
 }
 /* СТИЛИ СТРАНИЦЫ */
 .page {
+  margin: 0 auto;
+  color: var(--main-color);
   font-family: "IBM Plex mono";
   font-weight: 400;
   font-size: 18px;
-  background-color: var(--bg-color);
   background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  color: var(--main-color);
-  max-inline-size: var(--breakpoint-s, 375px);
-  margin: 0 auto;
 }
 
 /* ШАПКА */
@@ -60,48 +74,73 @@
 }
 
 .decorated-zone__item {
-  display: none;
+  content: "REC";
+  position: absolute;
+  display: inline-block;
+  color: var(--accent-color);
+  font-size: 18px;
+  line-height: 25px;
+  inset-block-start: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
+  inset-inline-end: clamp(2.375rem, 1.779rem + 2.54vw, 3rem);
+}
+
+.decorated-zone__item::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  filter: drop-shadow(0px 0px 4px var(--accent-color));
+  block-size: 9px;
+  inline-size: 9px;
+  inset-inline-end: -20px;
+  inset-block-start: 9px;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  --inset-value: var(--inline--section-padding);
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
 }
 
 .decorated-zone::before {
-  position: absolute;
-  content: "";
-  inline-size: 25px;
-  block-size: 25px;
-  border-top: 1px solid currentColor;
-  border-right: 1px solid currentColor;
-  inset-block-start: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
-  inset-inline-end: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
+  border-top: var(--border-value);
+  border-right: var(--border-value);
+  inset-block-start: var(--inset-value);
+  inset-inline-end: var(--inset-value);
 }
 
 .decorated-zone::after {
-  position: absolute;
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid currentColor;
-  border-left: 1px solid currentColor;
-  inset-block-end: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
-  inset-inline-start: clamp(0.625rem, 0.029rem + 2.54vw, 1.25rem);
+  border-bottom: var(--border-value);
+  border-left: var(--border-value);
+  inset-block-end: var(--inset-value);
+  inset-inline-start: var(--inset-value);
 }
 
 .header {
-  padding: clamp(10px, 0.029rem + 2.54vw, 20px);
-}
-
-.header__content {
   display: grid;
-  grid-template-rows: 1fr min-content min-content;
+  grid-template-rows: 1fr min-content 1fr;
   grid-template-areas: "menu" "title" "text";
-}
-
-.decorated-zone__item {
-  grid-area: decoration;
+  padding: var(--inline--section-padding);
+  block-size: 668px;
+  min-block-size: 100vh;
 }
 
 .header__theme-menu {
+  color: var(--accent-color);
   grid-area: menu;
-  justify-self: end;
+  margin-block-start: 65px;
+}
+
+.header__title {
+  grid-area: title;
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+.header__content-text {
+  grid-area: text;
   align-self: center;
 }
 
@@ -109,27 +148,18 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: var(--indentation-s, 10px);
-}
-
-.header__title {
-  grid-area: title;
-  text-shadow: 2px 2px 0px var(--shadow-color);
-  padding-block-end: 20px;
-}
-
-.header__content-text {
-  grid-area: text;
+  gap: 10px;
 }
 
 /* MAIN */
 .main {
-  padding-inline: var(--indentation-s, 10px);
+  padding-inline: var(--inline--section-padding);
   line-height: 23.4px;
 }
 
 .why {
-  padding-block: 40px 25px;
+  padding-block-start: clamp(40px, 1.307rem + 5.09vw, 60px);
+  padding-block-end: clamp(25px, 0.668rem + 3.82vw, 40px);
 }
 
 .what {
@@ -137,27 +167,52 @@
 }
 
 .advice {
-  padding-block: 25px;
+  padding-block-start: 25px;
+}
+
+.advice__heading {
+  margin-block-end: 10px;
 }
 
 .advice__text {
-  margin-block-end: 50px;
+  margin-block-end: 40px;
 }
 
 .advice__subtitle {
   margin-block-end: 10px;
-}
-
-.advice__images {
-  display: grid;
-  gap: 10px;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .advice__image {
   max-inline-size: 100%;
+  min-block-size: 100%;
+  vertical-align: bottom;
 }
 
 .advice__img {
+  display: block;
+  object-fit: fill;
+  object-position: center;
   inline-size: 100%;
-  object-fit: cover;
+}
+
+.gallery {
+  display: grid;
+  gap: 10px;
+  padding-block-end: 40px;
+}
+
+.gallery__list {
+  display: grid;
+  gap: 10px;
+}
+/* FOOTER */
+
+.footer {
+  padding: var(--inline--section-padding);
+  display: grid;
+  place-items: center;
+  min-block-size: 668px;
+  block-size: 100vh;
 }
