--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,13 +1,9 @@
 :root {
-  --bg-color: #000028;
-  --main-color: #353430;
-  --accent-color: #ff8dcb;
-  --heading-color: #ffc2e6;
-  --shadow-color: #ff0070;
-  --bg-image: url(../images/cover-image-light.png);
-  --indentation-s: 10px;
-  /* BREAKPOINTS */
-  --breakpoint-s: 375px;
-  --breakpoint-m: 768px;
-  --brealpoint-l: 1024px;
+  --main-color: #f1b2ce;
+  --secondary-color: #000028;
+  --heading-color: #db00ff;
+  --accent-color: #ff0070;
+  --bg-image: url(../images/cover-image-dark.png);
+  --inline--section-padding: clamp(10px, 0.029rem + 2.54vw, 20px);
+  --border-value : 1px solid var(--accent-color);
 }
