Финальный фикс перед ревью

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,9 +1,12 @@
 .page.theme_dark {
+  --main-font: "IBM Plex mono", monospace, sans-serif;
   --main-color: #f1b2ce;
   --secondary-color: #000028;
   --heading-color: #db00ff;
   --accent-color: #ff0070;
-  --bg-color: var(--secondary-color);
   --bg-image: url(../images/cover-image-dark.png);
-  --border-value: 1px solid var(--accent-color);
+  --bg-color: var(--secondary-color);
+  --inline-section-padding: clamp(10px, 0.029rem + 2.54vw, 20px);
+  --block-section-padding: clamp(50px, 1.336rem + 7.63vw, 80px);
+  --hover-color: rgba(255, 0, 112, 0.4);
 }
