--- a/styles/light.css
+++ b/styles/light.css
@@ -11,18 +11,30 @@
   --heading-color: #ffc2e6;
   --shadow-color: #ff0070;
   --bg-image: url(../images/cover-image-light.png);
-  --border-value: 1px solid currentColor;
-  .decorated-zone__item {
-    display: none;
-  }
+  --hover-color: rgba(50, 49, 45, 0.4);
+
   .decorated-zone {
-    color: var(--main-color);
+    color: var(--main-color, #353430);
   }
   .section-heading {
-    color: var(--main-color);
+    color: var(--main-color, #353430);
   }
   .header__theme-menu {
     color: currentColor;
+  }
+
+  .decorated-zone__item {
+    display: none;
+  }
+
+  .decorated-zone::before {
+    border-top: 1px solid var(--main-color, #353430);
+    border-right: 1px solid var(--main-color, #353430);
+  }
+
+  .decorated-zone::after {
+    border-bottom: 1px solid var(--main-color, #353430);
+    border-left: 1px solid var(--main-color, #353430);
   }
 }
 
@@ -34,5 +46,6 @@
     --heading-color: #ffc2e6;
     --shadow-color: #ff0070;
     --bg-image: url(../images/cover-image-light.png);
+    --hover-color: rgba(50, 49, 45, 0.4);
   }
 }
