--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,5 @@
 :root {
+  --main-font: "IBM Plex mono", monospace, sans-serif;
   --main-color: #f1b2ce;
   --secondary-color: #000028;
   --heading-color: #db00ff;
@@ -7,5 +8,5 @@
   --bg-color: var(--secondary-color);
   --inline-section-padding: clamp(10px, 0.029rem + 2.54vw, 20px);
   --block-section-padding: clamp(50px, 1.336rem + 7.63vw, 80px);
-  --border-value: 1px solid var(--accent-color);
+  --hover-color: rgba(255, 0, 112, 0.4);
 }
